fix: clickable elements too close together for mobile

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,9 +7,8 @@
 }
 
 .home__first {
-    max-width: 500px;
     text-align: center;
-    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .home__logo {
@@ -54,8 +53,8 @@
 }
 
 .home__icon {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
 }
 
 figure {
@@ -107,8 +106,8 @@ figure:active {
     }
 
     .home__icon {
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
     }
 
     .home__greet {
@@ -127,8 +126,8 @@ figure:active {
     }
 
     .home__icon {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
 
     .home__greet {
