--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -6,7 +6,7 @@
 }
 
 .project__name {
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
