--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   --border-radius: 20px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 800px) {
   :root {
     --small-font-size: 0.8rem;
     --normal-font-size: 0.875rem;
